Fix group badge misalignment if there is no group icon

--- a/packages/core/less/admin/PermissionsPage.less
+++ b/packages/core/less/admin/PermissionsPage.less
@@ -83,7 +83,6 @@
 
       .Badge {
         margin: -3px 2px -3px 0;
-        vertical-align: 0;
       }
     }
     td:not(:hover) .Select-caret,
@@ -105,7 +104,6 @@
   }
   .Badge {
     margin: -3px 3px -3px 0;
-    vertical-align: 1px;
     .box-shadow(none);
   }
 }
